--- a/src/css/Storage/StorageBody.module.scss
+++ b/src/css/Storage/StorageBody.module.scss
@@ -1,6 +1,7 @@
-@import './variables.scss';
+@import '../variables.scss';
 
 .mainContainer {
+  position: fixed;
   display: flex;
   flex-direction: row;
 
@@ -9,11 +10,13 @@
 .listContainer {
   display: flex;
   flex-direction: column;
+
   width: 50%;
   margin-left: 1%;
 
   .table {
     display: flex;
+    height: auto;
     flex-direction: column;
     margin-top: 1em;
   }
@@ -52,12 +55,12 @@
 }
 
 .formContainer {
+  display: flex;
   margin: 0;
   margin-top: 1rem;
   margin-right: 0;
   display: flex;
   flex-direction: column;
-
   width: 50%;
   .logOutButton,
   .startInventarizationButton {
@@ -98,6 +101,7 @@
   }
 
   form {
+    display: flex;
     margin-left: 0;
     border-radius: 2rem;
     border: 1px solid black;
