--- a/src/css/Storage/ComparisonResult.module.scss
+++ b/src/css/Storage/ComparisonResult.module.scss
@@ -28,8 +28,9 @@
   .modalClose {
     background-color: black;
     color: white;
+    height: 3rem;
     width: 15rem;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     font-size: 1.5rem;
   }
   .modalClose:hover {
